feat(ui): enhance user detail and search screens with improved layout and toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">GitHub User Search</string>
+    <string name="search_github_users">Search GitHub users</string>
+    <string name="welcome_search_github_users">Welcome, Search GitHub users!</string>
 </resources>
